--- a/MyWbsiteApi/MyWbsiteApi.csproj
+++ b/MyWbsiteApi/MyWbsiteApi.csproj
@@ -14,4 +14,9 @@
     <ProjectReference Include="..\Application\Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Middlewares\" />
+    <Folder Include="Tools\" />
+  </ItemGroup>
+
 </Project>
